--- a/main.css
+++ b/main.css
@@ -1,45 +1,3 @@
-<head>
-
-  <link rel="stylesheet" type="text/css" href="main.css">
-
- </div>
-
-<div id="orange"> {
-  border-top-color: #ffa500;
-}
-</div>
-
-<div id="yellow"> {
-  border-top-color: #ff0;
-}
-</div>
-
-<div id="green"> {
-  border-top-color: #00bc3f;
-}
-</div>
-
-</div>
-
-<div id="blue"> {
-  border-top-color: #06f;
-}
-</div>
-
-
-<div id="indigo"> {
-  border-top-color: #8a2be2;
-}
-</div>
-
-
-<div id="violet"> {
-  border-top-color: ##d300c9;
-}}
-</div>
-
-</head>
-
 div {
   border: 20px solid #000; /* this is short hand for setting 
                             the border's width, its type, and color */
@@ -50,7 +8,15 @@ div {
   border-left-color: transparent; /* these remove the color from the left side */
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
+}
 
- <div id="red"> {
+#red { /* this selects any elements with the red id */
   border-top-color: #f00;
 }
+
+#orange {border-top-color: #ffa500;}
+#yellow {border-top-color: #ff0;}
+#green {border-top-color: #00bc3f;}
+#blue {border-top-color: #06f;}
+#indigo {border-top-color: #8a2be2;}
+#violet {border-top-color: #d300c9;}
